整理抽象类和单元测试代码